--- a/src/header/styles.css
+++ b/src/header/styles.css
@@ -1,4 +1,4 @@
-.wgsa-header > .mdl-layout__header-row {
+.wgsa-header {
   border-bottom: 1px solid rgba(0, 0, 0, 0.14);
 }
 
